Err broken page link

--- a/src/pages/fr/core-concepts/routing.mdx
+++ b/src/pages/fr/core-concepts/routing.mdx
@@ -21,7 +21,7 @@ src/pages/posts/1.md         -> monsite.com/posts/1
 ```
 
 :::tip
-Il n'y a pas de "configuration de routage" séparée à maintenir dans un projet Astro ! Lorsque vous ajoutez un fichier dans le répertoire `/src/pages`, une nouvelle route est automatiquement créée pour vous. Dans les constructions statiques, vous pouvez personnaliser le format de sortie du fichier en utilisant l'option de configuration [`build.format`](/fr/référence/configuration-reference/#buildformat).
+Il n'y a pas de "configuration de routage" séparée à maintenir dans un projet Astro ! Lorsque vous ajoutez un fichier dans le répertoire `/src/pages`, une nouvelle route est automatiquement créée pour vous. Dans les constructions statiques, vous pouvez personnaliser le format de sortie du fichier en utilisant l'option de configuration [`build.format`](/fr/reference/configuration-reference/#buildformat).
 :::
 
 ## Navigation entre les pages
@@ -181,7 +181,7 @@ Cette page sera servie pour toute valeur de `resource` et `id` : `resources/user
 
 #### Modification de l'exemple `[...slug]` pour le mode SSR
 
-Comme les pages SSR ne peuvent pas utiliser `getStaticPaths`, elles ne peuvent pas recevoir de props. Ici, nous modifions notre [exemple précédent](#exemple--pages-dynamiques-a-plusieurs-niveaux) pour qu'il fonctionne en SSR en recherchant la valeur du paramètre `slug` dans un objet. Si la route est à la racine ("/"), le paramètre slug sera `undefined`. Si la valeur n'existe pas dans l'objet, nous redirigeons vers une page 404.
+Comme les pages SSR ne peuvent pas utiliser `getStaticPaths`, elles ne peuvent pas recevoir de props. Ici, nous modifions notre [exemple précédent](#exemple--pages-dynamiques-à-plusieurs-niveaux) pour qu'il fonctionne en SSR en recherchant la valeur du paramètre `slug` dans un objet. Si la route est à la racine ("/"), le paramètre slug sera `undefined`. Si la valeur n'existe pas dans l'objet, nous redirigeons vers une page 404.
 
 
 ```astro title="src/pages/[...slug].astro"
