--- a/src/pages/es/reference/errors/content-schema-contains-slug-error.mdx
+++ b/src/pages/es/reference/errors/content-schema-contains-slug-error.mdx
@@ -11,11 +11,11 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 ---
 
 > **ContentSchemaContainsSlugError**: 
-            return `Un esquema de colecciónde contenido no contiene el `slug` ya que esta reservado para la generación de slugs. Elimine esto de su esquema de colección de contenido.`;
+            return `Un esquema de colección de contenido no debe contener el `slug` ya que esta reservado para la generación de slugs. Elimine esto de su esquema de colección de contenido.`;
          (E09003)
 
 ## ¿Qué salió mal?
-Un esquema de colección de contenido no debe contener el campo `slug`. Esto está reservado por Astro para generar slugs de entrada. Elimine el campo `slug` de su esquema o elija un nombre diferente.
+Un esquema de colección de contenido no debe contener la propiedad `slug`. Esto está reservado por Astro para generar slugs. Elimine el campo `slug` de su esquema o elija un nombre diferente.
 
 **Ver también:**
--  [El campo reservado de entrada `slug`](/es/guides/content-collections/)
+-  [La propiedad reservada `slug`](/es/guides/content-collections/)
