--- a/src/pages/es/reference/errors/invalid-content-entry-slug-error.mdx
+++ b/src/pages/es/reference/errors/invalid-content-entry-slug-error.mdx
@@ -15,7 +15,7 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
          (E09002)
 
 ## ¿Qué salió mal?
-Una entrada en `src/content/` tiene un `slug` no válido. Este campo está reservado para generar slugs de entrada y debe ser una cadena cuando está presente.
+Un archivo en `src/content/` tiene un `slug` no válido. Este campo está reservado para generar slugs y debe ser un string cuando está presente.
 
 **Ver también:**
--  [El campo reservado de entrada `slug`](/es/guides/content-collections/)
+-  [La propipedad reservada `slug`](/es/guides/content-collections/)
