--- a/src/pages/es/reference/errors/invalid-content-entry-frontmatter-error.mdx
+++ b/src/pages/es/reference/errors/invalid-content-entry-frontmatter-error.mdx
@@ -16,7 +16,7 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 "date" debe ser una fecha válida. (E09001)
 
 ## ¿Qué salió mal?
-Un archivo Markdown o MDX en `src/content/` no coincide con su esquema de colección.
-Asegúrate que todos los campos requeridos estén presentes y que todos los campos sean del tipo correcto.
-Puedes verificar el esquema de colección en su archivo `src/content/config.*`.
-Ve la [documentación de colecciones de contenido](/es/guides/content-collections/) para más información.
+Un archivo Markdown o MDX en `src/content/` no coincide con tu esquema de colección.
+Asegúrate que todos los campos requeridos estén presentes y que todos las propiedades sean del tipo correcto.
+Puedes verificar el esquema de colección en tu archivo `src/content/config.*`.
+Vea la [documentación de colecciones de contenido](/es/guides/content-collections/) para más información.
