added missing suggestion

--- a/src/pages/es/reference/errors/invalid-content-entry-frontmatter-error.mdx
+++ b/src/pages/es/reference/errors/invalid-content-entry-frontmatter-error.mdx
@@ -10,7 +10,7 @@ i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
 
-> **Example error message:**<br/>
+> **Mensaje de error de ejemplo:**<br/>
 **blog** → el frontmatter de **post.md** no coincide con el esquema de colección.<br/>
 "title" es requerido.<br/>
 "date" debe ser una fecha válida. (E09001)
