--- a/src/pages/fr/core-concepts/routing.mdx
+++ b/src/pages/fr/core-concepts/routing.mdx
@@ -26,7 +26,7 @@ Il n'y a pas de "configuration de routage" séparée à maintenir dans un projet
 
 ## Navigation entre les pages
 
-Astro utilise la standarlisation HTML [`<a>` elements](https://developer.mozilla.org/fr-FR/docs/Web/HTML/Element/a) pour naviguer entre les routes. Il n'y a pas de composant `<Link>` spécifique au framework fourni.
+Astro utilise des [éléments HTML`<a>`](https://developer.mozilla.org/fr-FR/docs/Web/HTML/Element/a) standards pour naviguer entre les routes. Il n'y a pas de composant `<Link>` spécifique au framework fourni.
 
 ```astro title="src/pages/index.astro"
 <p>Lire d'avantage <a href="/about/">a propos</a> d'Astro!</p>
