Err typo '/fr-v1' to '/en-v1' for an example
Co-authored-by: Happydev <81974850+MoustaphaDev@users.noreply.github.com>

--- a/src/pages/fr/core-concepts/routing.mdx
+++ b/src/pages/fr/core-concepts/routing.mdx
@@ -77,7 +77,7 @@ const { lang, version } = Astro.params;
 ...
 ```
 
-Cela va générer `/fr-v1/info` et `/fr-v2/info`.
+Cela va générer `/en-v1/info` et `/fr-v2/info`.
 
 Les paramètres peuvent être inclus dans des parties distinctes du chemin, ainsi nous pourrions utiliser `src/pages/[lang]/[version]/info.astro` avec le même `getStaticPaths` pour générer `/en/v1/info` et `/fr/v2/info`.
 
