"Les paramètres rest"
Co-authored-by: Happydev <81974850+MoustaphaDev@users.noreply.github.com>

--- a/src/pages/fr/core-concepts/routing.mdx
+++ b/src/pages/fr/core-concepts/routing.mdx
@@ -104,7 +104,7 @@ const { path } = Astro.params;
 
 Cela générera `/sequences/one/two/three`, `/sequences/four`, et `/sequences`. (Donner au paramètre rest la valeur `undefined` lui permet de correspondre à la page de niveau principal).
 
-Les paramètres de rest peuvent être utilisés avec **d'autres paramètres nommés**. Par exemple, nous pourrions représenter le visualiseur de fichiers de GitHub avec une route dynamique comme celle-ci :
+Les paramètres rest peuvent être utilisés avec **d'autres paramètres nommés**. Par exemple, nous pourrions représenter le visualiseur de fichiers de GitHub avec une route dynamique comme celle-ci :
 
 
 ```
