--- a/src/pages/fr/core-concepts/routing.mdx
+++ b/src/pages/fr/core-concepts/routing.mdx
@@ -110,7 +110,7 @@ Les paramètres rest peuvent être utilisés avec **d'autres paramètres nommés
 ```
 /[org]/[repo]/tree/[branch]/[...file]
 ```
-In this example, a request for `/withastro/astro/tree/main/docs/public/favicon.svg` would be split into the following named parameters:
+Dans cet exemple, une requête pour `/withastro/astro/tree/main/docs/public/favicon.svg` serait divisée en les paramètres nommés suivants :
 
 ```js
 {
