--- a/src/pages/fr/core-concepts/routing.mdx
+++ b/src/pages/fr/core-concepts/routing.mdx
@@ -235,7 +235,7 @@ Il est possible que plusieurs routes correspondent au même chemin URL. Par exem
 Astro a besoin de savoir quelle route doit être utilisée pour construire la page. Pour ce faire, il les trie en fonction des règles suivantes :
 
 - Les routes statiques sans paramètres de chemin d'accès ont la priorité sur toutes les autres routes.
-- Les routes dynamiques utilisant des paramètres nommés sont prioritaires par rapport aux paramètres de repos.
+- Les routes dynamiques utilisant des paramètres nommés sont prioritaires par rapport aux paramètres rest.
 - Les paramètres de repos ont la priorité la plus basse
 - Les égalités sont résolues par ordre alphabétique
 
