'Dans' -> 'Etant donné'
Co-authored-by: Happydev <81974850+MoustaphaDev@users.noreply.github.com>

--- a/src/pages/fr/core-concepts/routing.mdx
+++ b/src/pages/fr/core-concepts/routing.mdx
@@ -239,7 +239,7 @@ Astro a besoin de savoir quelle route doit être utilisée pour construire la pa
 - Les paramètres de repos ont la priorité la plus basse
 - Les égalités sont résolues par ordre alphabétique
 
-Dans l'exemple ci-dessus, voici quelques exemples de la façon dont les règles vont faire correspondre une URL demandée à la route utilisée pour construire le HTML :
+Étant donné l'exemple ci-dessus, voici quelques exemples de la façon dont les règles vont faire correspondre une URL demandée à la route utilisée pour construire le HTML :
 
 - `pages/post/create.astro` - Correspondra au chemin `/post/create`
 - `pages/post/[pid].astro` - Correspondra au chemin `/post/1`, `/post/abc`, etc. Mais pas à `/post/create`
