--- a/src/pages/fr/core-concepts/routing.mdx
+++ b/src/pages/fr/core-concepts/routing.mdx
@@ -251,7 +251,7 @@ Astro supporte la pagination pour les grandes collections de données qui doiven
 
 Les noms de routes paginées doivent utiliser la même syntaxe de `[crochets]` que les routes dynamiques. Par exemple, le nom de fichier `/astronauts/[page].astro` générera des routes pour `/astronauts/1`, `/astronauts/2`, etc, là où `[page]` est le numéro de pages générées.
 
-Vous pouvez utiliser la fonction `paginate()` pour générer ces pages pour un tableau de valeurs comme suis :
+Vous pouvez utiliser la fonction `paginate()` pour générer ces pages pour un tableau de valeurs comme suit :
 
 ```astro /{ (paginate) }/ /paginate\\(.*\\)/ /(?<=const.*)(page)/ /page\\.[a-zA-Z]+/
 ---
