--- a/src/pages/fr/core-concepts/routing.mdx
+++ b/src/pages/fr/core-concepts/routing.mdx
@@ -389,10 +389,10 @@ Dans cet exemple, seuls `src/pages/index.astro` et `src/pages/posts/post1.md` se
 
 <FileTree>
 - src/pages/
-  - _répertoire caché/
+  - _répertoire-caché/
     - page1.md
     - page2.md
-  - _hidden-page.astro
+  - _page-cachée.astro
   - **index.astro**
   - posts/
     - _SomeComponent.astro
