--- a/src/pages/fr/core-concepts/routing.mdx
+++ b/src/pages/fr/core-concepts/routing.mdx
@@ -36,7 +36,7 @@ Astro utilise des [éléments HTML`<a>`](https://developer.mozilla.org/fr-FR/doc
 
 Un fichier de page Astro peut spécifier des paramètres de route dynamiques dans son nom de fichier pour générer les pages correspondantes. Par exemple, vous pouvez créer un fichier `authors/[author].astro` qui génère une page de biographie pour chaque auteur de votre blog. `author` devient un _paramètre_ accessible depuis l'intérieur de la page.
 
-En mode sortie statique par défaut d'Astro, ces pages sont générées au moment de la construction, et vous devez donc prédéterminer la liste des `author` qui obtiennent un fichier correspondant. En mode SSR, une page sera générée sur demande pour toute route qui correspond.
+Dans le mode de sortie statique par défaut d'Astro, ces pages sont générées au moment de la construction, et vous devez donc prédéterminer la liste des `author` qui obtiennent un fichier correspondant. En mode SSR, une page sera générée sur demande pour toute route qui correspond.
 
 ### Mode Statique (SSG)
 
