--- a/src/pages/pt-br/guides/integrations-guide.mdx
+++ b/src/pages/pt-br/guides/integrations-guide.mdx
@@ -35,7 +35,7 @@ Execute o comando `astro add` utilizando o gerenciador de pacotes de sua escolha
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpx astro add react
+  pnpm astro add react
   ```
   </Fragment>
   <Fragment slot="yarn">
@@ -55,7 +55,7 @@ Execute o comando `astro add` utilizando o gerenciador de pacotes de sua escolha
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpx astro add react tailwind partytown
+  pnpm astro add react tailwind partytown
   ```
   </Fragment>
   <Fragment slot="yarn">
