--- a/src/pages/es/guides/deploy/gitlab.mdx
+++ b/src/pages/es/guides/deploy/gitlab.mdx
@@ -35,7 +35,7 @@ Puedes usar [GitLab Pages](https://pages.gitlab.io/) para alojar un proyecto de 
 
    ```yaml
    # La imagén de Docker que será usada para compilar tu app.
-   image: node:14
+   image: node:lts
 
    pages:
      cache:
