--- a/src/pages/es/reference/api-reference.mdx
+++ b/src/pages/es/reference/api-reference.mdx
@@ -790,7 +790,7 @@ Un identificador único que usa la ruta de archivo relativa a `src/content/[coll
 
 **Example Type:** `'entry-1' | 'entry-2' | ...`
 
-Un slug listo para usar en una URL. Por defecto es el `id` sin la extensión de archivo, pero puede ser configurado usando [la propiedad de configuración `slug()`](#slug). Establecido en el tipo `string` si se configura una sobrescritura de `slug()` y enumera todos los posibles valores de cadena de lo contrario.
+Un slug listo para usar en una URL. Por defecto es el `id` sin la extensión de archivo, pero puede ser descartado por ajustes [la propiedad del slug](/es/guides/content-collections/#defining-custom-slugs) en el frontmatter del archivo
 
 #### `data`
 
