--- a/src/pages/en/guides/configuring-astro.mdx
+++ b/src/pages/en/guides/configuring-astro.mdx
@@ -67,7 +67,7 @@ You can also provide type definitions manually to VSCode, using this JSDoc notat
 
 ```js
 // astro.config.mjs
-export default /** @type {import('astro').AstroUserConfig} */ ({
+export default /** @type {import('astro').AstroUserConfig} */ {
   // your configuration options here...
   // https://docs.astro.build/en/reference/configuration-reference/
 }
