--- a/src/pages/pl/getting-started.mdx
+++ b/src/pages/pl/getting-started.mdx
@@ -13,7 +13,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 **Gotowy do aktualizacji?** [Skorzystaj z naszego przewodnika po aktualizacji](/pl/guides/upgrade-to/v2/).
 :::
 
-<h2>Co to jest Astro?</h2>
+<h2>Czym jest Astro?</h2>
 
 Astro to **wszechstronny framework** do budowania **szybkich,** **koncentrujących się na treści** stron internetowych. 
 
