--- a/src/pages/pl/getting-started.mdx
+++ b/src/pages/pl/getting-started.mdx
@@ -70,7 +70,7 @@ Nasz [Przewodnik po instalacji](/pl/install/auto/) posiada pełne, krok po kroku
 
 Zobacz przykłady niektórych kluczowych koncepcji i wzorców witryny Astro!
 
-📚 [Dodaj swoją pierwszą stronę](/pl/core-concepts/astro-pages/) do twojej aplikacji.
+📚 [Dodaj swoją pierwszą stronę](/pl/core-concepts/astro-pages/) do swojej witryny.
 
 📚 Dowiedz się więcej o [strukturze projektu](/pl/core-concepts/project-structure/) w Astro.
 
