--- a/src/pages/pl/getting-started.mdx
+++ b/src/pages/pl/getting-started.mdx
@@ -76,7 +76,7 @@ Zobacz przykłady niektórych kluczowych koncepcji i wzorców witryny Astro!
 
 📚 Dowiedz się więcej o [routingu opartego na plikach](/pl/core-concepts/routing/).
 
-*... pełną dokumentację API znajdziesz w zakładce **Referencje**.*
+*... naszą pełną dokumentację API znajdziesz w zakładce **Referencje**.*
 
 
 ## Rozbuduj swój projekt Astro
