--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -396,6 +396,90 @@ const { Content } = await entry.render();
 <Content />
 ```
 
+## Migrating from File-Based Routing 
+If your existing site uses [file-based routing](/en/core-concepts/astro-pages/#markdownmdx-pages) with Markdown files in the `src/pages` folder, you may want to migrate to content collections. This gives you the benefit of type-safe frontmatter, but requires you to set up routing yourself.
+
+1. [Upgrade](/en/guides/upgrade-to/v2/) to Astro v2.0 or later and [set up TypeScript](/en/guides/content-collections/#setting-up-typescript) for content collections.
+2. Move the subdirectories of `src/pages` to subdirectories of `src/content`. Each subdirectory represents a content type. For example, to migrate the [blog posts in the tutorial](/en/tutorial/2-pages/2/), move the contents of `src/pages/posts` to `src/content/posts`. 
+3. Create a `src/content/config.ts` file and [define a schema](/en/guides/content-collections/#defining-a-collection-schema) for each content type. For the blog, we only have one content type, `posts`:
+
+```astro title="src/content/config.ts"
+// Import utilities from `astro:content`
+import { z, defineCollection } from "astro:content";
+// Define a schema for each collection you'd like to validate.
+const postsCollection = defineCollection({
+    schema: z.object({
+      title: z.string(),
+      pubDate: z.date(),
+      description: z.string(),
+      author: z.string(),
+      image: z.object({
+        url: z.string(),
+        alt: z.string()
+      }),
+      tags: z.array(z.string())
+    })
+ });
+// Export a single `collections` object to register your collection(s)
+export const collections = {
+  posts: postsCollection,
+};
+```
+
+:::tip
+If your editor doesn't recognize `astro:content`, make sure you're on the latest version of Astro and try restarting the dev server. 
+:::
+
+4. To [generate routes](/en/guides/content-collections/#generating-routes-from-content), create a `.astro` page with a [dynamic route](/en/core-concepts/routing/#dynamic-routes), then query and render your content. In our tutorial blog, which uses the static output mode, we'll use `getStaticPaths` to create a route for each page:
+
+```astro title="[...slug].astro"
+---
+import { getCollection } from 'astro:content';
+import MarkdownPostLayout from '../../layouts/MarkdownPostLayout.astro';
+
+export async function getStaticPaths() {
+  const blogEntries = await getCollection('posts');
+  return blogEntries.map(entry => ({
+    params: { slug: entry.slug }, props: { entry },
+  }));
+}
+
+const { entry } = Astro.props;
+const { Content } = await entry.render();
+---
+<MarkdownPostLayout frontmatter={entry.data}>
+  <Content />
+</MarkdownPostLayout>
+```
+
+:::note
+In this example, we provided the layout for our posts in the dynamic route, but you can also provide it directly in the Markdown frontmatter:
+```astro title="src/content/post-1.md"
+---
+layout: ../../layouts/MarkdownPostLayout.astro
+title: 'My First Blog Post'
+pubDate: 2022-07-01
+...
+---
+```
+This works whether or not you define a `layout` property in the schema.
+:::
+
+5. To fetch your content, use [`getCollection`](/en/reference/api-reference/#getcollection) or [`getEntryBySlug`](/en/reference/api-reference/#getentrybyslug) instead of `Astro.glob`. For example, our unique tags logic becomes:
+
+```js title="src/pages/tags/[tag].astro" del={1,2} add={4,5}
+const allPosts = await Astro.glob("../posts/*.md");
+const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
+
+const allPosts = await getCollection("posts");
+const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
+```
+:::note
+When used to fetch Markdown files, `Astro.glob` returns objects with a `frontmatter` property. Instead, `getCollection` and `getEntryBySlug` provide this frontmatter data on the `data` property.
+:::
+
+For a full example of migrating the blog tutorial to content collections, see the [Content Collections branch](https://github.com/withastro/blog-tutorial-demo/tree/content-collections) of the tutorial repo.
+
 
 ## Modifying Frontmatter with Remark
 
