fix highlighting in first sample

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -397,13 +397,13 @@ const { Content } = await entry.render();
 ```
 
 ## Migrating from File-Based Routing 
-If your existing site uses [file-based routing](/en/core-concepts/astro-pages/#markdownmdx-pages) with Markdown files in the `src/pages` folder, you may want to migrate to content collections. This gives you the benefit of type-safe frontmatter, but requires you to set up routing yourself.
+If your existing site uses [file-based routing](/en/core-concepts/astro-pages/#markdownmdx-pages) with Markdown files in the `src/pages` folder, you may want to migrate to content collections. This gives you the benefit of type-safe frontmatter, but requires you to set up routing yourself. This guide uses the result of the [Build a Blog tutorial](http://localhost:3000/en/tutorial/0-introduction/) as an example starting point.
 
 1. [Upgrade](/en/guides/upgrade-to/v2/) to Astro v2.0 or later and [set up TypeScript](/en/guides/content-collections/#setting-up-typescript) for content collections.
 2. Move the subdirectories of `src/pages` to subdirectories of `src/content`. Each subdirectory represents a content type. For example, to migrate the [blog posts in the tutorial](/en/tutorial/2-pages/2/), move the contents of `src/pages/posts` to `src/content/posts`. 
 3. Create a `src/content/config.ts` file and [define a schema](/en/guides/content-collections/#defining-a-collection-schema) for each content type. For the blog, we only have one content type, `posts`:
 
-```astro title="src/content/config.ts"
+```ts title="src/content/config.ts"
 // Import utilities from `astro:content`
 import { z, defineCollection } from "astro:content";
 // Define a schema for each collection you'd like to validate.
