--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -400,7 +400,7 @@ const { Content } = await entry.render();
 If your existing site uses [file-based routing](/en/core-concepts/astro-pages/#markdownmdx-pages) with Markdown files in the `src/pages` folder, you may want to migrate to content collections. This gives you the benefit of type-safe frontmatter, but requires you to set up routing yourself. This guide uses the result of the [Build a Blog tutorial](http://localhost:3000/en/tutorial/0-introduction/) as an example starting point.
 
 1. [Upgrade](/en/guides/upgrade-to/v2/) to Astro v2.0 or later and [set up TypeScript](/en/guides/content-collections/#setting-up-typescript) for content collections.
-2. Move the subdirectories of `src/pages` to subdirectories of `src/content`. Each subdirectory represents a content type. For example, to migrate the [blog posts in the tutorial](/en/tutorial/2-pages/2/), move the contents of `src/pages/posts` to `src/content/posts`. 
+2. Move Markdown and MDX pages from `src/pages` to subdirectories of `src/content`. Each subdirectory represents a content type. For example, to migrate the [blog posts in the tutorial](/en/tutorial/2-pages/2/), move the contents of `src/pages/posts` to `src/content/posts`. 
 3. Create a `src/content/config.ts` file and [define a schema](/en/guides/content-collections/#defining-a-collection-schema) for each content type. For the blog, we only have one content type, `posts`:
 
 ```ts title="src/content/config.ts"
