--- a/src/pages/es/guides/configuring-astro.mdx
+++ b/src/pages/es/guides/configuring-astro.mdx
@@ -69,7 +69,7 @@ También puedes proporcionar definiciones de tipo manualmente a VSCode, utilizan
 
 ```js
 // astro.config.mjs
- export default /** @type {import('astro').AstroUserConfig} */ ({
+ export default /** @type {import('astro').AstroUserConfig} */ {
   // sus opciones de configuración van aquí...
   // https://docs.astro.build/es/reference/configuration-reference/
 }
