--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -430,7 +430,7 @@ export const collections = {
 If your editor doesn't recognize `astro:content`, make sure you're on the latest version of Astro and try restarting the dev server. 
 :::
 
-4. To [generate routes](/en/guides/content-collections/#generating-routes-from-content), create a `.astro` page with a [dynamic route](/en/core-concepts/routing/#dynamic-routes), then query and render your content. In our tutorial blog, which uses the static output mode, we'll use `getStaticPaths` to create a route for each page:
+4. To [generate routes](/en/guides/content-collections/#generating-routes-from-content), create a `.astro` page with a [dynamic route](/en/core-concepts/routing/#dynamic-routes), then query and render your content. Our tutorial blog uses the static output mode, so we'll use `getStaticPaths` to create a route for each page:
 
 ```astro title="[...slug].astro"
 ---
@@ -453,7 +453,7 @@ const { Content } = await entry.render();
 ```
 
 :::note
-In this example, we provided the layout for our posts in the dynamic route, but you can also provide it directly in the Markdown frontmatter:
+In this example, we provided the layout for our posts in the dynamic route, but you can provide it individually in a post's frontmatter instead:
 ```astro title="src/content/post-1.md"
 ---
 layout: ../../layouts/MarkdownPostLayout.astro
