--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -430,7 +430,7 @@ export const collections = {
 If your editor doesn't recognize `astro:content`, make sure you're on the latest version of Astro and try restarting the dev server. 
 :::
 
-4. To [generate routes](/en/guides/content-collections/#generating-routes-from-content), create a `.astro` page with a [dynamic route](/en/core-concepts/routing/#dynamic-routes), then query and render your content. Our tutorial blog uses the static output mode, so we'll use `getStaticPaths` to create a route for each page:
+4. To [generate routes](/en/guides/content-collections/#generating-routes-from-content), create a `.astro` page with a [dynamic route](/en/core-concepts/routing/#dynamic-routes), then query and render your content. Our tutorial blog uses the static output mode, so we'll use `getStaticPaths` to create a route for each post:
 
 ```astro title="[...slug].astro"
 ---
