highlight layout line

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -454,7 +454,7 @@ const { Content } = await entry.render();
 
 :::note
 In this example, we provided the layout for our posts in the dynamic route, but you can provide it individually in a post's frontmatter instead:
-```md title="src/content/post-1.md"
+```md title="src/content/post-1.md" add={2}
 ---
 layout: ../../layouts/MarkdownPostLayout.astro
 title: 'My First Blog Post'
