or import statements

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -465,7 +465,7 @@ pubDate: 2022-07-01
 This works whether or not you define a `layout` property in the schema.
 :::
 
-5. To fetch your content, use [`getCollection`](/en/reference/api-reference/#getcollection) or [`getEntryBySlug`](/en/reference/api-reference/#getentrybyslug) instead of `Astro.glob`. For example, our unique tags logic becomes:
+5. To fetch your content, use [`getCollection`](/en/reference/api-reference/#getcollection) or [`getEntryBySlug`](/en/reference/api-reference/#getentrybyslug) instead of `Astro.glob` or `import` statements. For example, our unique tags logic becomes:
 
 ```js title="src/pages/tags/[tag].astro" del={1,2} add={4,5}
 const allPosts = await Astro.glob("../posts/*.md");
