copyable code is better

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -467,19 +467,14 @@ This works whether or not you define a `layout` property in the schema.
 
 5. To fetch your content, use [`getCollection`](/en/reference/api-reference/#getcollection) or [`getEntryBySlug`](/en/reference/api-reference/#getentrybyslug) instead of `Astro.glob` or `import` statements. For example, our unique tags logic becomes:
 
-```js title="src/pages/tags/[tag].astro" del={4,5,12} add={7,8,13}
+```js title="src/pages/tags/[tag].astro" "post.data" "getCollection(\"posts\")"
 ...
 export async function getStaticPaths() {
-
-  const allPosts = await getCollection("posts");
-  const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
-
   const allPosts = await getCollection("posts");
   const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
 
   return uniqueTags.map((tag) => {
     const filteredPosts = allPosts.filter((post) =>
-      post.frontmatter.tags.includes(tag)
       post.data.tags.includes(tag)
     );
     return {
