Use double quotes for consistency

--- a/src/pages/en/guides/testing.mdx
+++ b/src/pages/en/guides/testing.mdx
@@ -55,7 +55,7 @@ Alternatively, you can install Playwright within your Astro project using the pa
 <html lang="en">
   <head>
     <title>Astro is awesome!</title>
-    <meta name='description' content="Pull content from anywhere and serve it fast with Astro's next-gen island architecture." />
+    <meta name="description" content="Pull content from anywhere and serve it fast with Astro's next-gen island architecture." />
   </head>
   <body></body>
 </html>
