--- a/src/pages/es/guides/testing.mdx
+++ b/src/pages/es/guides/testing.mdx
@@ -55,7 +55,7 @@ Alternativamente, puedes instalar Playwright dentro de tu proyecto de Astro usan
 <html lang="en">
   <head>
     <title>Astro is awesome!</title>
-    <meta name='description' content="Pull content from anywhere and serve it fast with Astro's next-gen island architecture." />
+    <meta name="description" content="Pull content from anywhere and serve it fast with Astro's next-gen island architecture." />
   </head>
   <body></body>
 </html>
