--- a/src/pages/en/guides/troubleshooting.mdx
+++ b/src/pages/en/guides/troubleshooting.mdx
@@ -137,6 +137,10 @@ nodeLinker: "node-modules"
 
 In Astro, using a `<head>` tag works like any other HTML tag: it does not get moved to the top of the page or merged with the existing `<head>`. Because of this, you usually only want to include one `<head>` tag throughout a page. We recommend writing that single `<head>` and its contents in a [layout component](/en/core-concepts/layouts/).
 
+### An unwanted `<script>` or `<style>` is included
+
+Astro's build process works on the module graph: this means that once a component is imported, its `<script>` and `<style>` tags are processed, optimized, and bundled, whether it is rendered or not (or used at all!). This does not apply if the `is:inline` directive is applied. 
+
 ## Tips and tricks
 
 ### Debugging with `console.log()`
