Add ButterCMS official starter to CMS guide (#2482)
* learn more -> official resources, with starter project

* disclaimer in Integrating with Astro

* parens -> note

* remove unwanted changes

--- a/src/pages/en/guides/cms/buttercms.mdx
+++ b/src/pages/en/guides/cms/buttercms.mdx
@@ -12,11 +12,11 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 ButterCMS is a headless CMS and blog engine that allows you to publish structured content to use in your project.
 
 ## Integrating with Astro
-
-In this section, we'll use the [ButterCMS SDK](https://www.npmjs.com/package/buttercms) to bring your data into your Astro project.
-
+:::note
+For a full blog site example, see the [Astro + ButterCMS Starter Project](https://buttercms.com/starters/astro-starter-project/).
+:::
+In this section, we'll use the [ButterCMS SDK](https://www.npmjs.com/package/buttercms) to bring your data into your Astro project. 
 To get started, you will need to have the following:
-
 ### Prerequisites
 
 1. **An Astro project** - If you don't have an Astro project yet, our [Installation guide](/en/install/auto/) will get you up and running in no time.
@@ -119,8 +119,9 @@ const fields = pageData.fields as Fields;
 </html>
 ```
 
-### Learn More
+## Official Resources
 
+- [Astro + ButterCMS Starter Project](https://buttercms.com/starters/astro-starter-project/)
 - The [full ButterCMS API documentation](https://buttercms.com/docs/api/)
 - ButterCMS's [JavaScript Guide](https://buttercms.com/docs/api-client/javascript/)
 
